# RUSTY-AI

./: .env.example  .gitignore  .gitmodules  API.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.production.yml  docker-compose.yml  setup.sh
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
RUSTY-AI/Documents/: personal_ai_assistant_prd.md
config/: default.toml  production.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  middleware.rs  server.rs  websocket.rs
crates/api/src/routes/: auth.rs  briefing.rs  conversation.rs  health.rs  knowledge.rs  mod.rs  plugins.rs  tasks.rs  voice.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: briefing.rs  context_manager.rs  database.rs  intent.rs  lib.rs  orchestrator.rs  plugin_manager.rs  storage.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: document_processor.rs  lib.rs  semantic_search.rs  vector_store.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: communication.rs  example_plugin.rs  lib.rs  loader.rs  runtime.rs  security.rs
crates/voice/: Cargo.toml
crates/voice/src/: audio.rs  config.rs  lib.rs  stt.rs  tts.rs  vad.rs  voice_pipeline.rs
docker/: entrypoint.sh
frontend/: .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/docker/: default.conf  nginx.conf  security-headers.conf
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx  History.tsx  KnowledgeBase.tsx  Navigation.tsx  Settings.tsx  ThemeToggle.tsx  VoiceChat.tsx  VoiceChatEnhanced.tsx  VoiceVisualizer.tsx
frontend/src/config/: api-config.ts
frontend/src/hooks/: use-voice.ts  use-websocket.ts
frontend/src/lib/: websocket-client.ts
frontend/src/pages/: Index.tsx
implementation-plan/: 00-executive-summary.md  01-tech-stack-selection.md  02-development-setup.md  03-phase1-mvp.md  04-phase2-productivity.md  05-phase3-financial.md  06-phase4-health.md  07-plugin-architecture.md  08-voice-pipeline.md  09-data-security.md  10-integration-guide.md  11-testing-strategy.md  12-deployment-plan.md  13-monitoring-observability.md  14-roadmap-milestones.md
memory/agents/: README.md
memory/sessions/: README.md
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_search_and_logging.down.sql  000002_search_and_logging.up.sql
scripts/: build_release.sh  run_dev.sh
src/: ai_service.rs  knowledge_service.rs  knowledge_service_simple.rs  main.rs  memory_service.rs  voice_service.rs
