[package]
name = "rusty-ai"
version = "0.1.0"
edition = "2021"
authors = ["Personal AI Assistant Team"]
license = "MIT"
repository = "https://github.com/Clemens865/RUSTY-AI"

[[bin]]
name = "rusty-ai-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-openai = "0.23"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.21"
qdrant-client = "1.7"
tiktoken-rs = "0.5"
pdf-extract = "0.7"

[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/voice",
    "crates/knowledge",
    "crates/plugins",
    "crates/common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Personal AI Assistant Team"]
license = "MIT"
repository = "https://github.com/yourusername/personal-ai-assistant"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web Framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Cryptography & Security
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.2"

# Configuration
config = "0.13"
dotenv = "0.15"

# Testing
mockall = "0.12"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2