[package]
name = "rusty-ai-api"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-ai-common = { path = "../common" }
rusty-ai-core = { path = "../core" }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async Runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Authentication & Security
jsonwebtoken = { workspace = true }
ring = { workspace = true }

# Configuration
config = { workspace = true }
dotenv = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = { workspace = true }